syntax = "proto3";

package core;

option go_package = "tenkhours/proto/pb/core";

message Metric {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  string character_id = 4;
  optional string category_id = 5;
  string name = 6;
  double value = 7;
  string unit = 8;
}

message MetricInput {
  optional string id = 1;
  optional string category_id = 2;
  string name = 3;
  double value = 4;
  string unit = 5;
}